--- a/Контакты.html
+++ b/Контакты.html
@@ -5,12 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Контакты</title>
-    <link rel="stylesheet" href="/frontend/proecttest/page.css"> 
+    <link rel="stylesheet" href="page.css"> 
 </head>
 <body>
     <div class="header">
         <ul class="menu">
-            <li><a href="index.html"><img src="/frontend/practic/img/logo.png" alt="logo"></a></li>
+            <li><a href="index.html"><img src="img/logo.png" alt="logo"></a></li>
             <li><a href="index.html">Главная</a></li>
             <li><a href="Каталог.html">Каталог</a></li>
             <li><a href="Контакты.html">Контакты</a></li>
