stil la cantainere

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="page.css"> 
 </head>
 <body> 
-    <div class="cantainer">
+    <div class="container">
         <div class="header">
             <ul class="menu">
                 <li><a href="index.html"><img src="img/logo.png" alt="logo"></a></li>
