--- a/index.html
+++ b/index.html
@@ -10,8 +10,10 @@
 <body> 
     <div class="container">
         <div class="header">
+            <div class="logo">
+                <a href="index.html"><img src="img/logo.png" alt="logo"></a>
+            </div>
             <ul class="menu">
-                <li><a href="index.html"><img src="img/logo.png" alt="logo"></a></li>
                 <li><a href="index.html">Главная</a></li>
                 <li><a href="Каталог.html">Каталог</a></li>
                 <li><a href="Контакты.html">Контакты</a></li>
