--- a/index.html
+++ b/index.html
@@ -21,11 +21,11 @@
         </div>
 
     <div class="content">
-        <hr>
-
+        <hr class="hh">
         <h1>
              Smart-Shop
         </h1>
+        <hr class="hh">
         <p>
             Таким образом новая модель организационной деятельности влечет за&nbsp;собой процесс внедрения и&nbsp;модернизации позиций, занимаемых участниками в&nbsp;отношении поставленных задач.</br>
             С&nbsp;другой стороны новая модель организационной деятельности играет важную роль в&nbsp;формировании дальнейших направлений развития.</br>
