--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
         </table>
     </div>
     <div class="footer">
-        <hr>
+        <hr class="hh">
 
         <footer>
             <h4>
