add img for index and style

--- a/index.html
+++ b/index.html
@@ -26,12 +26,17 @@
              Smart-Shop
         </h1>
         <hr class="hh">
+        
         <p>
-            Таким образом новая модель организационной деятельности влечет за&nbsp;собой процесс внедрения и&nbsp;модернизации позиций, занимаемых участниками в&nbsp;отношении поставленных задач.</br>
-            С&nbsp;другой стороны новая модель организационной деятельности играет важную роль в&nbsp;формировании дальнейших направлений развития.</br>
-            Товарищи! постоянный количественный рост и&nbsp;сфера нашей активности влечет за&nbsp;собой процесс внедрения и&nbsp;модернизации соответствующий условий активизации.</br>
-            Разнообразный и&nbsp;богатый опыт дальнейшее развитие различных форм деятельности в&nbsp;значительной степени обуславливает создание соответствующий условий активизации.
-
+            <img src="img/images.jpeg" alt="photo shop">
+            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Iste, tempora quibusdam odit ad consequuntur enim facere nulla consectetur at ullam voluptates repudiandae perspiciatis deleniti nobis vitae, voluptatibus culpa cumque accusantium?
+            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Adipisci similique maxime iure ut, totam qui? In provident nobis quisquam neque numquam iste, libero eaque praesentium eos, repellat, quidem sequi quo.
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod ipsum nobis laudantium ad, voluptate velit aperiam earum facere beatae? Dolorum ab quis dolor sequi quas eaque esse veritatis eos. Ut.
+            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Praesentium hic illum tempore, cumque eveniet quidem molestias eos quis quisquam ea consequuntur totam inventore necessitatibus quae culpa doloremque, excepturi natus. Harum!
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium incidunt vel assumenda et aspernatur? Soluta aliquid repellendus quasi voluptatem aperiam quis, maxime consequatur architecto veniam et, dolore quas cum totam?
+            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Minima magnam ad eius quasi facere in a. Aut, necessitatibus quos, sed quae eligendi ratione iusto nihil consequatur harum, accusamus veniam adipisci!
+            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Earum maxime natus fuga, obcaecati blanditiis facilis cupiditate ab reprehenderit culpa magni voluptatibus non nulla a vel! Autem magni sint consectetur obcaecati!
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam non amet iure sapiente laborum voluptatum accusamus aliquam, placeat veritatis, voluptatibus culpa? Quam eligendi tenetur nulla dignissimos aperiam modi perspiciatis ipsum.
         </p>
 
         <table class="table">
