--- a/Товар​.каталога3.html
+++ b/Товар​.каталога3.html
@@ -22,9 +22,9 @@
 
     <h1>Мобильный телефон Samsung Galaxy A01 Core 1/16GB Black​</h1>
     <a href="/frontend/proecttest/img/21701850.jpg"target="_blank">
-        <img src="/frontend/proecttest/img/21701850.jpg" alt="">
+        <img src="img/21701850.jpg" alt="">
     </a>
-    <h3>Описание Мобильный телефон Samsung Galaxy A01 Core 1/16GB Black</h3>
+    <h3>Описание телефон Samsung Galaxy A01 Core 1/16GB Black</h3>
     <p class="des">
         Большой экран с улучшенным обзором
         Смартфон Galaxy A01 Core с дисплеем 5.3" HD+ создает эффект присутствия благодаря широкому экрану большого размера. Комфортный угол обзора превращает просмотр вашего контента в настоящее удовольствие.Тонкий корпус, в который поместилось еще больше
@@ -81,7 +81,7 @@
         *Типичное значение получено в результате тестирования в независимой лаборатории. Типичное значение — это расчетная средняя величина с учетом отклонений емкости образцов батарей, протестированных в соответствии со стандартом IEC 61960. Установленная (минимальная) емкость составляет 2920 мА*ч. Актуальное время работы батареи может варьироваться в зависимости от сетевой среды, особенностей эксплуатации и других факторов
     </p>
     <hr>
-    <footer>
+    <footer  class="footer1">
         <h4>
             ​Все​ ​ права​ ​ защищены&nbsp;&copy;
         </h4>
