--- a/Каталог.html
+++ b/Каталог.html
@@ -18,7 +18,7 @@
             <li><a href="index.html">Главная</a></li>
         </ul>
     </div>
-    <hr>
+    <hrclass="hh" >
 
     <h1>Мобильные телефоны</h1>
     <a href="Товар​.каталога1.html"><h3>Мобильный телефон Samsung Galaxy A52 4/128GB Black ​</h3></a>
@@ -28,7 +28,7 @@
         Экран (6.5", Super AMOLED, 2400x1080)</br> Qualcomm Snapdragon 720G (2 x 2.3 ГГц + 6 x 1.8 ГГц)</br> основная квадро-камера: 64 Мп + 12 Мп + 5 Мп + 5 Мп</br> фронтальная 32 Мп/ RAM 4 ГБ/ 128 ГБ </br>встроенной памяти + microSD (до 1 ТБ)/ 3G/ LTE/ GPS/ A-GPS/ ГЛОНАСС/ BDS/ </br>поддержка 2х SIM-карт (Nano-SIM)</br> Android 11.0 (One UI)/ 4500 мА*ч
     </p>
     </br>
-    <hr>
+    <hr class="hh">
 
     
     <a href="Товар​.​каталога2.html"><h3>Мобильный телефон Samsung Galaxy S20 Plus 8/128GB Cosmic Black</h3></a>
@@ -37,7 +37,7 @@
     <p class="text">
         Экран (6.7", Dynamic AMOLED 2X, 3200x1440)</br> Samsung Exynos 990 (2 x 2.73 ГГц + 2 x 2.5 ГГц + 4 x 2.0 ГГц)</br> основная квадро-камера: 12 Мп + 64 Мп + 12 Мп + ToF</br> фронтальная: 10 Мп / RAM 8 ГБ/ 128 ГБ встроенной памяти + microSD (до 1 ТБ)/ 3G/ LTE/ GPS</br> поддержка 2х SIM-карт (Nano-SIM)</br>Android 10.0 (Q) / 4500 мА*ч
     </p>
-    <hr>
+    <hr class="hh">
 
     <a href="Товар​.каталога3.html"><h3>Мобильный телефон Samsung Galaxy A01 Core 1/16GB Black​</h3></a>
     <a href="Товар​.каталога3.html"><img src="img/21701850.jpg" alt=""></a>
@@ -45,8 +45,8 @@
     <p class="text">
         Экран (5.3", PLS, 1480x720)</br> Mediatek MT6739 (1.5 ГГц)</br> основная камера: 8 Мп, фронтальная 5 Мп</br> RAM 1 ГБ/ 16 ГБ встроенной памяти + microSD (до 512 ГБ)/ 3G/ LTE/ GPS/ ГЛОНАСС</br>поддержка 2х SIM-карт (Nano-SIM)</br> Android 10.0 (Go)/ 3000 мА*ч
     </p>
-    <hr>
-    <footer>
+    <hr class="hh">
+    <footer  class="footer1">
         <h4>
             ​Все​ ​ права​ ​ защищены&nbsp;&copy;
         </h4>
