--- a/Контакты.html
+++ b/Контакты.html
@@ -18,7 +18,7 @@
             <li><a href="index.html">Главная</a></li>
         </ul>
     </div>
-    <hr>
+    <hr class="hh">
     <h1>
         Напишите​ ​ нам
     </h1>
@@ -30,7 +30,7 @@
         <textarea name="comment">scrieti mesajul </textarea><br>
         <input type="submit" value="отправить"><input type="reset"value="Удалить"><br>
    </form>
-   <hr>
+   <hr class="hh">
     <h1>Адрес</h1>
     <p>
         Контактный​ ​ номер​ ​ телефона:012345678910 <br>
@@ -41,8 +41,8 @@
     <iframe 
          src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d43019.24602959886!2d28.140081600000002!3d47.63190665!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2s!4v1637865611052!5m2!1sen!2s" width="100%" height="300px" style="border:0;" allowfullscreen="" loading="lazy">
     </iframe>
-    <hr>
-    <footer>
+    <hr class="hh">
+    <footer  class="footer1" >
         <h4>
             ​Все​ ​ права​ ​ защищены&nbsp;&copy;
         </h4>
