--- a/Товар​.каталога1.html
+++ b/Товар​.каталога1.html
@@ -22,18 +22,21 @@
     <hr>
 
     <h1>Мобильный телефон Samsung Galaxy A01 Core 1/16GB Black</h1>
+    <div class="scrut">
     
-    <a href="/frontend/proecttest/img/166276365.jpg"target="_blank">
-        <img src="img/166276365.jpg" alt="">
-    </a>
-    <h3>Описание Мобильный телефон Samsung Galaxy A01 Core 1/16GB Black</h3>
-    <p class="des">
-        Большой экран с улучшенным обзором
-        Смартфон Galaxy A01 Core с дисплеем 5.3" HD+ создает эффект присутствия благодаря широкому экрану большого размера. Комфортный угол обзора превращает просмотр вашего контента в настоящее удовольствие.Тонкий корпус, в который поместилось еще больше
-        Внутри тонкого (всего 8.6 мм) корпуса Galaxy A01 Core незаметно размещается емкая батарея, а красоту внешнего дизайна выгодно подчеркивают эффектные полоски.
-        Делайте потрясающие фотографии основной и фронтальной камерой
-        Сохраните свои лучшие моменты на красивых, четких снимках, сделанных основной камерой 8 Мп смартфона Galaxy A01 Core. Или станьте главным героем, повернув смартфон и воспользовавшись фронтальной камерой 5 Мп.
-    </p>
+        <a href="/frontend/proecttest/img/166276365.jpg"target="_blank">
+            <img src="img/166276365.jpg" alt="">
+        </a>
+        <h3>Описание телефон Samsung Galaxy A01 Core 1/16GB Black</h3>
+        <p class="des">
+            Большой экран с улучшенным обзором
+            Смартфон Galaxy A01 Core с дисплеем 5.3" HD+ создает эффект присутствия благодаря широкому экрану большого размера. Комфортный угол обзора превращает просмотр вашего контента в настоящее удовольствие.Тонкий корпус, в который поместилось еще больше
+            Внутри тонкого (всего 8.6 мм) корпуса Galaxy A01 Core незаметно размещается емкая батарея, а красоту внешнего дизайна выгодно подчеркивают эффектные полоски.
+            Делайте потрясающие фотографии основной и фронтальной камерой
+            Сохраните свои лучшие моменты на красивых, четких снимках, сделанных основной камерой 8 Мп смартфона Galaxy A01 Core. Или станьте главным героем, повернув смартфон и воспользовавшись фронтальной камерой 5 Мп.
+        </p>
+    </div>
+
     <h3>Технические характеристики Мобильный телефон Samsung Galaxy A01 Core 1/16GB Black </h3>
     <table class="date">
         <tr>
@@ -85,7 +88,7 @@
         *Типичное значение получено в результате тестирования в независимой лаборатории. Типичное значение — это расчетная средняя величина с учетом отклонений емкости образцов батарей, протестированных в соответствии со стандартом IEC 61960. Установленная (минимальная) емкость составляет 2920 мА*ч. Актуальное время работы батареи может варьироваться в зависимости от сетевой среды, особенностей эксплуатации и других факторов
     </p>
     <hr>
-    <footer>
+    <footer  class="footer1">
         <h4>
             ​Все​ ​ права​ ​ защищены&nbsp;&copy;
         </h4>
