--- a/Товар​.каталога1.html
+++ b/Товар​.каталога1.html
@@ -24,7 +24,7 @@
     <h1>Мобильный телефон Samsung Galaxy A01 Core 1/16GB Black</h1>
     <div class="scrut">
     
-        <a href="/frontend/proecttest/img/166276365.jpg"target="_blank">
+        <a href="img/166276365.jpg"target="_blank">
             <img src="img/166276365.jpg" alt="">
         </a>
         <h3>Описание телефон Samsung Galaxy A01 Core 1/16GB Black</h3>
