--- a/Товар​.каталога3.html
+++ b/Товар​.каталога3.html
@@ -21,7 +21,7 @@
     <hr>
 
     <h1>Мобильный телефон Samsung Galaxy A01 Core 1/16GB Black​</h1>
-    <a href="/frontend/proecttest/img/21701850.jpg"target="_blank">
+    <a href="img/21701850.jpg"target="_blank">
         <img src="img/21701850.jpg" alt="">
     </a>
     <h3>Описание телефон Samsung Galaxy A01 Core 1/16GB Black</h3>
