--- a/Товар​.​каталога2.html
+++ b/Товар​.​каталога2.html
@@ -21,7 +21,7 @@
     <hr>
 
     <h1>Мобильный телефон Samsung Galaxy S20 Plus 8/128GB Cosmic Black</h1>
-        <a href="/frontend/proecttest/img/143430934.jpg" target="_blank">
+        <a href="img/143430934.jpg" target="_blank">
     <img src="img/143430934.jpg" alt="">
     </a>
     <h3>Описание телефон Samsung Galaxy S20 Plus 8/128GB Cosmic Black</h3>
