finish contact pag

--- a/Контакты.html
+++ b/Контакты.html
@@ -8,44 +8,48 @@
     <link rel="stylesheet" href="page.css"> 
 </head>
 <body>
-    <div class="header">
-        <div class="logo">
-            <a href="index.html"><img src="img/logo.png" alt="logo"></a>
+    <div class="contatepag">
+        <div class="header">
+            <div class="logo">
+                <a href="index.html"><img src="img/logo.png" alt="logo"></a>
+            </div>
+            <ul class="menu">
+                <li><a href="Контакты.html">Контакты</a></li>
+                <li><a href="Каталог.html">Каталог</a></li>
+                <li><a href="index.html">Главная</a></li>
+            </ul>
         </div>
-        <ul class="menu">
-            <li><a href="Контакты.html">Контакты</a></li>
-            <li><a href="Каталог.html">Каталог</a></li>
-            <li><a href="index.html">Главная</a></li>
-        </ul>
-    </div>
-    <hr class="hh">
-    <h1>
-        Напишите​ ​ нам
-    </h1>
-   <form action="#">
-        Имя<input type="text" placeholder="nume"><br>
-        Email<input type="email" ><br>
-        Тема<input type="text"><br>
-        Текстовое​  поле:<br>
-        <textarea name="comment">scrieti mesajul </textarea><br>
-        <input type="submit" value="отправить"><input type="reset"value="Удалить"><br>
-   </form>
-   <hr class="hh">
-    <h1>Адрес</h1>
-    <p>
-        Контактный​ ​ номер​ ​ телефона:012345678910 <br>
-        Адрес :  Planeta Pamint <br>
-        Email : zaykih@shop.mail.com<br>
+        <hr class="hhr" width="100%">
+        <h1>
+            Напишите​ ​ нам
+        </h1>
+        <hr class="hhr"  width="100%">
+        <form action="#">
+            Имя<input type="text" placeholder="nume"><br>
+            Email<input type="email" ><br>
+            Тема<input type="text"><br>
+            Текстовое​  поле:<br>
+            <textarea name="comment">scrieti mesajul </textarea><br>
+            <input type="submit" value="отправить"><input type="reset"value="Удалить"><br>
+        </form>
+        <hr class="hhr">
+        <h1>Адрес</h1>
+        <hr class="hhr">
+        <p>
+            Контактный​ ​ номер​ ​ телефона:012345678910 <br>
+            Адрес :  Planeta Pamint <br>
+            Email : zaykih@shop.mail.com<br>
     
-    </p>
-    <iframe 
-         src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d43019.24602959886!2d28.140081600000002!3d47.63190665!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2s!4v1637865611052!5m2!1sen!2s" width="100%" height="300px" style="border:0;" allowfullscreen="" loading="lazy">
-    </iframe>
-    <hr class="hh">
-    <footer  class="footer1" >
-        <h4>
-            ​Все​ ​ права​ ​ защищены&nbsp;&copy;
-        </h4>
-    </footer>
+        </p>
+        <iframe 
+            src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d43019.24602959886!2d28.140081600000002!3d47.63190665!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2s!4v1637865611052!5m2!1sen!2s" width="100%" height="300px" style="border:0;" allowfullscreen="" loading="lazy">
+        </iframe>
+        
+        <footer  class="footer1" >
+            <h4>
+                ​Все​ ​ права​ ​ защищены&nbsp;&copy;
+            </h4>
+        </footer>
+    </div>
 </body>
 </html>
